--- a/utarray.html
+++ b/utarray.html
@@ -770,8 +770,8 @@ asciidoc.install(2);
 <h1>utarray: dynamic array macros for C</h1>
 <span id="author">Troy D. Hanson</span><br />
 <span id="email"><code>&lt;<a href="mailto:tdh@tkhanson.net">tdh@tkhanson.net</a>&gt;</code></span><br />
-<span id="revnumber">version 2.0.2,</span>
-<span id="revdate">March 2017</span>
+<span id="revnumber">version 2.1.0,</span>
+<span id="revdate">December 2018</span>
 <div id="toc">
   <div id="toctitle">Table of Contents</div>
   <noscript><p><b>JavaScript must be enabled in your browser to display the table of contents.</b></p></noscript>
@@ -1259,8 +1259,8 @@ A <em>pointer</em> to a particular element (obtained using <code>utarray_eltptr<
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Version 2.0.2<br />
-Last updated 2018-05-09 22:24:48 PDT
+Version 2.1.0<br />
+Last updated 2018-12-20 20:33:53 EST
 </div>
 </div>
 </body>
